# 2025_BigContest

./: 38.csv  60.csv  88.csv  92.csv  README.md  address.py  attribute_std_r2.csv  bc.py  bc_weighted.py  crawling.py  generate_rules.py  main.py  mct.py  normalized_dead_mcts_old.csv  null_url.csv  preprocess.py  pruned.py  pyproject.toml  rule_analysis.py  rulebook.csv  rulebook_weighted.csv  rulefit.py  smaller_rulebook.csv
crawling/: address.py  crawling.py
data/: address_url.csv  address_url_100.csv  address_url_100_1000.csv  final.csv  normalized_dead_mcts.csv  refined_address.csv
normalization/: main.py  mct.py  preprocess.py
reviews/: 002816BA73.csv  0840AC0A17.csv  09544ED347.csv  0B5B2332CF.csv  0BD65CD437.csv  0DA8A07267.csv  105CC28499.csv  17FF425166.csv  1CA7D76A49.csv  1EAFF3E9E0.csv  259A1E16FE.csv  2D1F5F9F5F.csv  34573ADA88.csv  3AE0B97C20.csv  40F6DE923B.csv  43195F0299.csv  48BCC595D9.csv  4DE273254C.csv  501AEDAE3D.csv  51006614E2.csv  51BEB72D68.csv  535999101E.csv  62968F5FF3.csv  63C63AF808.csv  63C676EAE1.csv  641DC575A8.csv  6810C7C7CE.csv  6A6D259BD3.csv  6ED6AC9EAE.csv  7287A93C2B.csv  74A053F902.csv  7A3D6D3CF9.csv  7F5C64F29B.csv  85D8F9D9BB.csv  97FAE8D665.csv  9853358A8C.csv  9869644D22.csv  98C0A088C7.csv  9D837FF7F3.csv  A2974AB3F0.csv  (+21 more)
