[project]
name = "2025-bigcontest"
version = "0.1.0"
description = "2025 Big Contest"
authors = [
    {name = "Jay Kim",email = "csjay@snu.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "playwright (>=1.55.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "imodels (>=2.0.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
